# ai-testing-framework

./: README.md  pyproject.toml  run_tests.py
_meta/agentdb/: agent.db
_meta/logs/: actions.jsonl
_meta/research/: competitive_landscape.md  traditional_testing_parallels.md
ai_test_framework/: __init__.py
ai_test_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai_test_framework/core/: adversarial.py  base_test.py  coverage.py  extractors.py  model.py  runner.py
ai_test_framework/fixtures/: __init__.py  causal_fixtures.py  generator.py  logic_problems.py
ai_test_framework/tests/: __init__.py  causal.py  consistency.py  explanatory.py  format.py  self_report.py
docs/: ai_model_testing_framework.md
tests/: test_base.py  test_causal.py  test_consistency.py  test_explanatory.py  test_extractors.py  test_runner.py  test_self_report.py
